2016-12-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Replace potentially malformed GCC-5 package set.

	* mingw32/mingw32-gcc4.xml (all component packages): Add release
	references for version 5.3.0-3 packages; these replace the former
	version 5.3.0-2 packages, which may have been responsible for
	improperly resolved dynamic linking references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2016-10-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Publish mingwrt-3.22.4 patch release.

	* mingw32/mingw32-runtime.xml (mingwrt-3.22.3-dev)
	(mingwrt-3.22.4-dll, mingwrt-3.22.4-lic, mingwrt-3.22.4-man): Add
	component package release records.
	* common/issue.log mingw32/issue.log: Update accordingly.

2016-10-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Publish mingwrt-3.22.3 patch release.

	* mingw32/mingw32-runtime.xml (mingwrt-3.22.3-dev)
	(mingwrt-3.22.3-dll, mingwrt-3.22.3-lic, mingwrt-3.22.3-man): Add
	component package release records.
	* common/issue.log mingw32/issue.log: Update accordingly.

2016-10-03  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add missing package descriptions.

	* mingw32/mingw32-gcc4.xml (mingw32-libatomic, mingw32-libgomp)
	(mingw32-libssp): Add missing package descriptions.  Avoid empty
	paragraph elements; they crash "mingw-get list".  Republish.
	* common/issue.log mingw32/issue.log: Update accordingly.

2016-09-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Publish mingwrt-3.22.2 and w32api-3.18.2 patch releases.

	* mingw32/mingw32-runtime.xml (mingwrt-3.22.2-dev)
	(mingwrt-3.22.2-dll, mingwrt-3.22.2-lic, mingwrt-3.22.2-man)
	(w32api-3.18.2-dev): Add component package release records.
	* common/issue.log mingw32/issue.log: Update accordingly.

2016-09-05  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct underspecified dependency in 2016-09-04 update.

	* mingw32/mingw32-gcc4.xml (mingw32-gcc-core-bin): Respecify...